refactor: de-lombok and reformat